# Metodolog-a-SDD---Gest-on-de-Desarrollo-de-Software

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_STEPS.md  README.md  docker-compose.yml  skills-lock.json
backend/: .env.example  README.md  alembic.ini  conftest.py  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/auth/: __init__.py  router.py  schemas.py  service.py
backend/categorias/: __init__.py  repository.py  router.py  schemas.py  service.py
backend/core/: __init__.py  config.py  database.py  dependencies.py  limiter.py  models.py  sanitize.py  security.py
backend/direcciones/: repository.py  router.py  schemas.py  service.py
backend/infrastructure/: __init__.py  dependencies.py  error_middleware.py  uow.py
backend/ingredientes/: __init__.py  repository.py  router.py  schemas.py  service.py
backend/pagos/: model.py  repository.py  router.py  schemas.py  service.py
backend/pedidos/: repository.py  router.py  schemas.py  service.py
backend/productos/: repository.py  router.py  schemas.py  service.py
backend/scripts/: __init__.py  seed.py  seed_dev_data.py  verify.py
backend/tests/: __init__.py  test_auth_login.py  test_auth_logout.py  test_auth_refresh.py  test_auth_register.py  test_auth_schemas.py  test_base_repository.py  test_categorias.py  test_checkout_validation.py  test_config.py  test_dependencies.py  test_direcciones.py  test_error_middleware.py  test_infrastructure_integration.py  test_ingredientes.py  test_orders_api.py  test_orders_fsm.py  test_pagos.py  (+12 more)
(+1152 files in other folders)
