[tool.poetry]
name = "foodstore-backend"
version = "1.0.0"
description = "Food Store Backend API - FastAPI with SQLModel and PostgreSQL"
authors = ["Food Store Team"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {version = "^0.27.0", extras = ["standard"]}
python-dotenv = "^1.0.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
sqlmodel = "^0.0.14"
alembic = "^1.13.1"
psycopg = {version = "^3.1.0", extras = ["binary"]}
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
PyJWT = "^2.8.1"
cryptography = "^41.0.7"
slowapi = "^0.1.9"
mercadopago = "^2.2.0"
httpx = "^0.25.2"
requests = "^2.31.0"
email-validator = "^2.1.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
